# gpu-comparison-tool

./: .gitignore  GPUPerformance.ipynb  README.md  config.py  environment.yml  gcp_gpu_available.json  main.py  pyproject.toml  requirements.txt  test.json  test.py
cloud_providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
cloud_providers/gcp/: __init__.py  gcp.py  models.py
jsons/: GCP_carbon.json  aws_gpu_available.json  energy_efficiency.json  gcp_gpu_available.json  gcp_gpu_pricing.json
models/: gpu.py
